<resources>
    <string name="app_name">Frequency Generator</string>
    <string name="single_frequency">Single frequency</string>
    <string name="hertz">Hz</string>
    <string-array name="wave_type">
        <item>Sine</item>
        <item>Sawtooth</item>
        <item>Triangle</item>
        <item>Square</item>
    </string-array>
    <string name="button_play_stop">Play/stop</string>
    <string name="frequency">Frequency</string>
    <!--DialogFragmentVolume-->
    <string name="volume">Volume</string>
    <string name="balance">Sound balance</string>
    <string name="left_channel">Left channel</string>
    <string name="right_channel">Right channel</string>
    <!--Navigation-->
    <string name="settings">Settings</string>

    <!--Settings-->
    <string name="scale">Scale</string>
    <string-array name="scale_entries">
        <item>Linear</item>
        <item>Logarithmic</item>
    </string-array>

    <string-array name="scale_values">
        <item>linear</item>
        <item>logarithmic</item>
    </string-array>
    <!--RangePreference-->
    <string name="range">Range</string>
    <string name="range_from">Range from</string>
    <string name="range_to">Range to</string>
    <string name="from_range">From</string>
    <string name="to_range">To</string>
    <!--RangePreference Errors-->
    <string name="error_lower_one">Value must be greater than 0</string>
    <string name="error_greater_22000">Value must be less than 22000</string>
    <string name="error_empty_field">Field is empty</string>
    <string name="error_to_greater_from">"'To' value must be greater than 'From' value"</string>
    <string name="error_from_less_to">"'From' value must be less than 'To' value"</string>
    <!--AlertDialog-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset">Reset</string>
    <!--EditTextFrequency Errors-->
    <string name="incorrectValue">Incorrect value</string>
   
</resources>