<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="Settings"
    android:title="@string/settings">

    <androidx.preference.PreferenceCategory app:title="@string/frequency">

        <ListPreference
            android:key="Scale"
            app:defaultValue="Logarithmic"
            app:entries="@array/scale_entries"
            app:entryValues="@array/scale_values"
            app:title="@string/scale"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:dialogTitle="Range_from"
            android:key="Range_from"
            app:defaultValue="1"
            app:title="@string/range_from"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

        <EditTextPreference
            android:dialogTitle="Range_to"
            android:key="Range_to"
            app:defaultValue="22000"
            app:title="@string/range_to"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

        <Preference
            android:key="range"
            android:title="Range"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>