<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/textViewTitleFrequency"
        style="@style/TextViewTitleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubtitleScale"
        style="@style/TextViewSubTitleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleFrequency"/>

    <TextView
        android:id="@+id/textViewItemScale"
        style="@style/TextViewItemSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSubtitleScale"/>

    <TextView
        android:id="@+id/textViewSubtitleRange"
        style="@style/TextViewSubTitleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/range"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewItemScale"/>

    <TextView
        android:id="@+id/textViewItemRange"
        style="@style/TextViewItemSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSubtitleRange"/>
</androidx.constraintlayout.widget.ConstraintLayout>